@@ -95,6 +95,7 @@ video/x-ms-wvx
 video/x-nsv
 video/x-ogm+ogg
 video/x-theora+ogg
+video/x-totem-stream
 x-content/video-dvd
 x-content/video-vcd
 x-content/video-svcd
